[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game_Utils/Scripts/ChoseControllsPlayer1_MANAGER.gd" type="Script" id=1]
[ext_resource path="res://Game_Utils/Assets/Imports/Menu/title_screen/logo.png" type="Texture" id=2]
[ext_resource path="res://Game_Utils/Scenes/Menu_Scenes/Buttons/JoyStick-Player1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game_Utils/Scenes/Menu_Scenes/Buttons/KeyBoard-Player1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game_Utils/Assets/Imports/Menu/title_screen/characters.png" type="Texture" id=5]
[ext_resource path="res://Game_Utils/Scenes/Menu_Scenes/Fonts/montserrat_24.tres" type="DynamicFont" id=6]
[ext_resource path="res://Game_Utils/Scenes/Fade/FadeIn.tscn" type="PackedScene" id=7]

[node name="Chose_Player" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1680.0
margin_bottom = 128.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 132.0
margin_right = 1680.0
margin_bottom = 524.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 838.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="JoyStick-Player1" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 126.0
margin_right = 838.0
margin_bottom = 186.0
scene_to_load = "res://Game_Utils/Scenes/Menu_Scenes/ChoseControllsPlayer2.tscn"
player1_controll = "joystick"

[node name="KeyBoard-Player1" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 206.0
margin_right = 838.0
margin_bottom = 266.0
scene_to_load = "res://Game_Utils/Scenes/Menu_Scenes/ChoseControllsPlayer2.tscn"
player1_controll = "keyboard"

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
editor/display_folded = true
margin_left = 842.0
margin_right = 1680.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Characters" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 259.0
margin_top = 36.0
margin_right = 579.0
margin_bottom = 356.0
texture = ExtResource( 5 )

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 528.0
margin_right = 1680.0
margin_bottom = 920.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Version 1.2.4
Herkul Studio"
valign = 2

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
